--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Project</string>
+
+    <string name="share_app">Поделиться приложением</string>
+    <string name="write_to_developers">Написать разработчикам</string>
+    <string name="user_agreement">Пользовательское соглашение</string>
+
+    <string name="share_app_text">Посмотрите это крутое приложение Playlist Maker!</string>
+
+    <string name="developer_email">kolia.silantiew@yandex.ru</string>
+    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+
+    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
